--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "rimraf ./build && tsc",
     "start": "npm run build && node ./dist/app/app.js",
     "dev-server": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/app/app.js\"",
-    "eslint": "eslint .",
+    "eslint": "eslint ./src/**/* --ext .ts",
+    "eslint-fix": "eslint . --ext .ts --fix",
     "test": "jest"
   },
   "author": "",
@@ -44,6 +45,8 @@
   },
   "_moduleAliases": {
     "@routes": "dist/app/routes",
-    "@controllers": "dist/core/controllers"
+    "@cases": "dist/core/cases",
+    "@repositories": "dist/core/repositories",
+    "@app": "dist/app"
   }
 }
