--- a/package.json
+++ b/package.json
@@ -1,52 +1,63 @@
 {
-  "name": "express-typescript",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/app.js",
-  "scripts": {
-    "build": "rimraf ./build && tsc",
-    "start": "npm run build && node ./dist/app/app.js",
-    "dev-server": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/app/app.js\"",
-    "eslint": "eslint ./src/**/* --ext .ts",
-    "eslint-fix": "eslint . --ext .ts --fix",
-    "test": "jest"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/preset-env": "^7.14.9",
-    "@babel/preset-typescript": "^7.14.5",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^16.4.9",
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "^4.28.5",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "jest": "^27.0.6",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^27.0.4",
-    "ts-node": "^10.1.0",
-    "tsc-watch": "^4.4.0",
-    "tslint": "^6.1.3",
-    "typescript": "^4.3.5"
-  },
-  "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "^4.17.1",
-    "module-alias": "^2.2.2",
-    "morgan": "~1.9.1",
-    "source-map-support": "^0.5.19"
-  },
-  "_moduleAliases": {
-    "@routes": "dist/app/routes",
-    "@cases": "dist/core/cases",
-    "@repositories": "dist/core/repositories",
-    "@app": "dist/app"
-  }
+    "name": "express-typescript",
+    "version": "1.0.0",
+    "description": "",
+    "main": "dist/app.js",
+    "scripts": {
+        "build": "rimraf ./build && tsc",
+        "start": "npm run build && node ./dist/app/app.js",
+        "dev-server": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/app/startApp.js\"",
+        "eslint": "eslint ./src/**/* --ext .ts",
+        "eslint-fix": "eslint . --ext .ts --fix",
+        "test": "jest"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@babel/preset-env": "^7.14.9",
+        "@babel/preset-typescript": "^7.14.5",
+        "@types/cookie-parser": "^1.4.2",
+        "@types/express": "^4.17.13",
+        "@types/jest": "^26.0.24",
+        "@types/node": "^16.10.2",
+        "@types/supertest": "^2.0.11",
+        "@typescript-eslint/eslint-plugin": "^4.28.5",
+        "@typescript-eslint/parser": "^4.28.5",
+        "eslint": "^7.32.0",
+        "eslint-config-standard": "^16.0.3",
+        "eslint-plugin-import": "^2.23.4",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^5.1.0",
+        "jest": "^27.0.6",
+        "rimraf": "^3.0.2",
+        "supertest": "^6.1.6",
+        "ts-jest": "^27.0.4",
+        "ts-node": "^10.1.0",
+        "tsc-watch": "^4.4.0",
+        "tslint": "^6.1.3",
+        "typescript": "^4.3.5"
+    },
+    "dependencies": {
+        "ajv": "^8.6.3",
+        "ajv-formats": "^2.1.1",
+        "cookie-parser": "~1.4.4",
+        "debug": "~2.6.9",
+        "express": "^4.17.1",
+        "module-alias": "^2.2.2",
+        "morgan": "~1.9.1",
+        "node-fetch": "^3.0.0",
+        "pg": "^8.7.1",
+        "reflect-metadata": "^0.1.13",
+        "source-map-support": "^0.5.19",
+        "typeorm": "^0.2.37"
+    },
+    "_moduleAliases": {
+        "@routes": "dist/app/routes",
+        "@cases": "dist/core/cases",
+        "@repositories": "dist/core/repositories",
+        "@services": "dist/core/services",
+        "@app": "dist/app",
+        "@core": "dist/core",
+        "@src": "dist/"
+    }
 }
