--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "experimentalDecorators": true,
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
     /* Basic Options */
     // "incremental": true,                         /* Enable incremental compilation */
@@ -54,8 +55,17 @@
       "@repositories/*": [
         "src/core/repositories/*"
       ],
+      "@services/*": [
+        "src/core/services/*"
+      ],
       "@app/*": [
         "src/app/*"
+      ],
+      "@core/*": [
+        "src/core/*"
+      ],
+      "src/*": [
+        "src/*"
       ],
     }, /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
